--- a/Website/styles.css
+++ b/Website/styles.css
@@ -38,6 +38,7 @@ body {
     max-height: 100%; 
     margin-top: 15px; 
     margin-bottom: 10px;
+    margin-left: 5px;
     border: 1px solid white;
 }
 
@@ -77,4 +78,17 @@ canvas{
     height: 43%;
     width: 43%;
     border: 5px solid #1f453b;
+}
+
+.quotes {
+    color: white;
+    font-style: italic;
+    position: absolute;
+    font-size: 20px;
+    text-align: center;
+    max-width: 25ch;
+}
+
+html::-webkit-scrollbar {
+    display: none;
 }
