--- a/Website/styles.css
+++ b/Website/styles.css
@@ -1,3 +1,32 @@
+@keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Firefox < 16 */
+@-moz-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Safari, Chrome and Opera > 12.1 */
+@-webkit-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Internet Explorer */
+@-ms-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Opera < 12.1 */
+@-o-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
 .container {
     display: flex;
     margin: 0px;
@@ -45,7 +74,7 @@ body {
 #headerText {
     color: white;
     font-family: 'Times New Roman', Times, serif;
-    font-size: 70px;
+    font-size: 60px;
     text-align: center;
     margin-top: 5px; 
     margin-bottom: -10px;   
@@ -87,6 +116,7 @@ canvas{
     font-size: 20px;
     text-align: center;
     max-width: 25ch;
+    animation: fadein 3s;
 }
 
 html::-webkit-scrollbar {
@@ -105,4 +135,23 @@ html::-webkit-scrollbar {
     font-size: larger;
     text-decoration: underline;
     margin-top: 15vh;
+}
+
+.nav-text {
+    color: white;
+}
+
+.nav-image {
+    max-width: 50%;
+    max-height: auto;
+    margin: auto;
+    border: 5px solid #1f453b;
+}
+
+.fadein {
+    -webkit-animation: fadein 3s; /* Safari, Chrome and Opera > 12.1 */
+    -moz-animation: fadein 3s; /* Firefox < 16 */
+    -ms-animation: fadein 3s; /* Internet Explorer */
+    -o-animation: fadein 3s; /* Opera < 12.1 */
+    animation: fadein 3s;
 }
